--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
 	margin: 0 0 0 0;
 	border: None;
 }
+.ng-app-embedded{
+	background-color = black;
+}
 .img_container {
 	display: flex;
 	align-items: flex-end;
