--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
 	margin: 0 0 0 0;
 	border: None;
+	backgound-color: black;
 }
 .ng-app-embedded{
-	background-color = black;
+	background-color: black;
 }
 .img_container {
 	display: flex;
